# hrms-back

./: .env  .env.example  .gitignore  Dockerfile  Pydantic_models.py  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tox-check.yml
auth/: auth.py  database.py  manager.py  schemas.py
database/: docker-compose.yml  init.sql  populate_data.sql
database/postgres/: init.sql  populate_data.sql
migrations/: env.py
models/: models.py
src/hrms_back/: config.py  main.py  pydantic_models.py
src/hrms_back/auth/: auth.py  config.py  database.py  dependencies.py  dependicies.py  manager.py  models.py  redis.py  schemas.py  utils.py
src/hrms_back/database/: database.py  redis.py
src/hrms_back/migrations/: env.py
src/hrms_back/migrations/versions/: 22da65ef65ca_add_status_column_to_appointment_table.py  b681b702bc92_initial_db.py  e4f1a07ed6c7_your_revision_message.py
src/hrms_back/models/: models.py  schemas.py
src/hrms_back/routes/appointment_routes/: models.py  router.py  schemas.py
src/hrms_back/routes/pacient_routes/: models.py  router.py  schemas.py
